--- a/src/configure.in
+++ b/src/configure.in
@@ -1064,7 +1064,7 @@ AC_CHECK_FUNCS(strerror tgetent times unsetenv grantpt nanosleep waitpid)
 AC_CHECK_FUNCS(setlocale fpgetmask fpresetsticky mtrace localtime_r asctime_r)
 AC_CHECK_FUNCS(mmap confstr strcasecmp mbscoll mbscasecoll fpclassify fpclass)
 AC_CHECK_FUNCS(setenv posix_openpt wcsxfrm sysctlbyname mbsnrtowcs)
-AC_CHECK_FUNCS(mallinfo ftruncate localtime_s)
+AC_CHECK_FUNCS(mallinfo ftruncate localtime_s localeconv)
 AC_CHECK_DECLS([mbsnrtowcs])
 AC_HEADER_TIME
 AC_HEADER_DIRENT
